working html slide(s) reading and showing

--- a/Documents/slide_2_html_example.html
+++ b/Documents/slide_2_html_example.html
@@ -1,16 +1,19 @@
 <html>
 <head>
-<title>Agenda</title>
+<title>Page title</title>
 </head>
 <body> 
-
-<h1>This is Slide 2</h1>
- 
-<h2>This is a subtitle 1</h2>
-<h3>This is a subtitle 2</h3>
-<p>Pauze: 10:00</p> 
+<p id='title'>Html Slide 2</p>
+<p id='subtitle'>Slide Show JabberPoint</p> 
+<p id='level1'>Welkom iedereen! </p> 
+<p id='level2'>Het is een genoegen om u hier te zien!</p> 
+<p id='level3'>Datum: 20 Oktober 2020 <br> Presentators: Phillip and Jhaner</p> 
+<p id='level4'>Tot ziens!</p>  
+<img src="http://www.slide1.nl/image1">
+<img src="http://www.slide1.nl/image2">
 </body>
 </html>
  
 
+ 
  
