--- a/Documents/slide_1_html_example.html
+++ b/Documents/slide_1_html_example.html
@@ -3,7 +3,7 @@
 <title>Page title</title>
 </head>
 <body> 
-<p id='title'>Slide 1</p>
+<p id='title'>Html Slide 1</p>
 <p id='subtitle'>Slide Show JabberPoint</p> 
 <p id='level1'>Welkom iedereen! </p> 
 <p id='level2'>Het is een genoegen om u hier te zien!</p> 
